styles.css
/* Color Variables */

:root {
    --darkGray:#28292D;
    --white: #E6E7E9;
    --gray: #838791;
    --gold: #776653;
    --blue: #0077C8;
    --orange: #D5923B;
}

html {
    font-size: 100%;
    box-sizing: border-box;
}

*, *::before, *::after {
    box-sizing: inherit;
}

body {
    margin: 0;
    background: linear-gradient(45deg, rgb(18, 18, 18), var(--darkGray) 100%);
    font-family: 'Karla', sans-serif;
    height: 100%;
}

.main {
    width: 100vw;
    height: 100%;
    margin: 0 auto;
    position: relative;
    overflow: hidden;
}

.main::after {
    content: '';
    background-image: url('Images/border-bottom.png');
    background-repeat: no-repeat;
    width: 100vw;
    height: 100%;
    position: absolute;
    top: 73%;
    left: calc(92% - 375px / 2);
    overflow: hidden;
    display: inline-block;
}

.intro-text-container {
    color: var(--white);
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-family: 'Karla', sans-serif;
}

.intro-header {
    margin-left: 55px;
    margin-bottom: 0;
    margin-top: -17px;
}

.intro-header-span1 {
    display: block;
}

.intro-header-span2 {
    color: #776653;
}

.intro-paragraph {
    display: block;
    width: 100%;
    color: var(--gray);
    margin-bottom: 7px;
    font-family: 'Karla', sans-serif;
    padding-left: 20px;
    padding-right: 20px;
}

.divider {
    width: 100%;
    padding-left: 20px;
    padding-right: 20px;
}

.divider-header {
    width: 103%;
    padding-left: 20px;
    padding-right: 20px;
}

.skills-header {
    margin-top: 10px;
    margin-left: 20px;
    margin-bottom: 6px;
    color: var(--white);
}

.languages-container {
    padding: 0;
    margin-left: 20px;
    color: var(--gray);
    margin-top: 0;
    margin-bottom: 9px;
}

.languages-header {
    color: var(--white);
    margin-right: 7px;
}

.languages-container > li,
.libraries-container > li,
.frameworks-container > li,
.tools-container > li {
    font-size: 13.5px;
}

.libraries-container {
    padding: 0;
    margin-left: 20px;
    color: var(--gray);
    margin-top: 0;
    margin-bottom: 9px;
}

.libraries-header {
    color: var(--white);
    margin-right: 7px;
}

.frameworks-container {
    padding: 0;
    margin-left: 20px;
    color: var(--gray);
    margin-top: 0;
    margin-bottom: 9px;
}

.frameworks-header {
    color: var(--white);
    margin-right: 7px;
}

.tools-container {
    padding: 0;
    margin-left: 20px;
    color: var(--gray);
    margin-top: 0;
}

.tools-header {
    color: var(--white);
    margin-right: 7px;
}

.project-container {
    margin-bottom: 26px;
    padding-left: 8px;
    padding-right: 20px;
    display: flex;
    justify-content: space-evenly;
}

.projects-header {
    margin-top: 10px;
    margin-left: 20px;
    margin-bottom: 16px;
    color: var(--white);
}

/* Project Styles */

.project {
    display: inline-block;
    text-align: center;
    width: 29%;
    box-shadow: 2px 2px 4px rgba(119, 102, 83, 0.5);
    transition: box-shadow 0.2s ease-in-out;
    border-radius: 10px;
    position: relative;
    color: var(--gray);
    cursor: pointer;
}

.project:not(:last-child) {
    padding-right: 10px;
}

.project:hover {
    box-shadow: 0px 8px 10px 0px rgba(0,0,0,0.25);
}

.project img {
    max-width: 100%;
}

.project h3 {
    margin: 1em 0;
    font-size: 1.5em;
    font-weight: 600;
}

/* Intro Submenu  */

.intro-submenu {
    display: none;
    margin-top: 0;
    margin-left: 18px;
    padding: 0;
    position: relative;
    top: -10px;
    color: var(--gray);
    animation: open 200ms linear, growDown 200ms linear;
}

.intro-submenu > li:first-of-type {
    font-weight: 700;
    text-decoration: underline;
    color: var(--gold);
}

.intro-submenu.show {
    display: inline-block;
}

/* Skills Submenu */

.skills-submenu {
    display: none;
    width: 100%;
    max-width: 236px;
    height: 105px;
    padding: 0;
    position: relative;
    top: -26px;
    animation: open 200ms linear, growDown 200ms linear;
    margin-bottom: 20px;
    padding-top: 6px;
}

.skills-submenu.show {
    display: inline-block;
}

.skills-submenu > .filler-header, .languages-header, .libraries-header, .frameworks-header, .tools-header {  /* Does not work if filler-header class is removed unknown reason */
    color: var(--gold);
}

/* Projects Submenu */

.projects-submenu {
    display: none;
    width: 100%;
    max-width: 111px;
    height: 105px;
    padding: 0;
    position: relative;
    left: 51px;
    top: -17px;
    animation: open 200ms linear, growDown 200ms linear;
    margin-bottom: 0px;
    padding-top: 6px;
}

.projects-submenu.show {
    display: inline-block;
}

.projects-submenu > li:not(:last-child) {
    margin-bottom: 15px;
}

/* Add pulsating blue border on hover */
.project:hover::before {
    content: "";
    position: absolute;
    top: -5px;
    right: -5px;
    bottom: -5px;
    left: -5px;
    border: 2px solid var(--orange);
    border-radius: 10px;
    animation: pulse 1s ease-in-out infinite;
}

@keyframes pulse {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.05);
    }
    100% {
        transform: scale(1);
    }
}

/* Add button press animation on click */
.project:active {
    transform: translateY(2px);
    box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25);
}

.project {
    border: 2px solid transparent;
    transition: border 0.2s ease-in-out;
    z-index: 2;
}

.project > p {
    position: relative;
    z-index: 2;
    color: var(--orange);
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;
}

.project > p:hover {
    color: var(--orange);
    font-weight: 700;
    text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;
}

.project-1 {
    background-image: url('Images/EasyBankLPThumbnail.PNG');
    background-repeat: no-repeat;
    background-size: cover;
}
/* ... */

